# CmakeTest

./: CMakeLists.txt
include/: Box.h
src/: Box.cpp  dataKeeper.cpp  main.cpp  processor.cpp
